[package]
name = "dfas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tobj = "3.2.0"
# core_simd = { git = "https://github.com/rust-lang/portable-simd" }
packed_simd = { version = "0.3.6", package = "packed_simd_2" }
rayon = "^1.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "mort_bench"
harness = false